fix z-index

--- a/browser-extension/common/src/custom-elements/session-recording-widgets/draft-session-viewer/index.css
+++ b/browser-extension/common/src/custom-elements/session-recording-widgets/draft-session-viewer/index.css
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 99999;
 }
 
 #draft-session-view {
